--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^17.0.0",
     "aos": "^2.3.4",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
