--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@metaplex/js": "^4.5.0",
     "@project-serum/anchor": "^0.14.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.5.2",
     "@solana/wallet-adapter-material-ui": "^0.11.0",
@@ -34,6 +35,7 @@
     "react-icons": "^4.3.1",
     "react-particles-js": "^3.5.3",
     "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
